[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/chat_ui.gd" id="1"]

[node name="ChatUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -350.0
offset_right = 500.0
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ChatContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="InputContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TeamToggle" type="CheckButton" parent="Panel/MarginContainer/VBoxContainer/InputContainer"]
layout_mode = 2
text = "Team"

[node name="ChatInput" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer/InputContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Press T to chat..."
max_length = 200

[node name="SendButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/InputContainer"]
layout_mode = 2
text = "Send"
